# operation-public-notice

./: .gitignore  DESIGN.md  README.md  ROADMAP.md  app.spec  main.py  pyproject.toml  pytest.ini  run_app.py
api/: dependencies.py  main.py
api/routes/: editais.py  evaluation.py  pipeline.py
config/: settings.py  sources.py
docs/: erros-e-correcoes.md
docs/superpowers/plans/: 2026-03-29-fastapi.md  2026-03-29-frontend.md  2026-03-29-scraper-fixes.md
extractors/: llm_extractor.py  llm_judge.py  pdf_extractor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  api.test.js
frontend/src/components/: Dashboard.jsx  Dashboard.test.jsx  EditalCard.jsx  EditalDetail.jsx  EditalList.jsx  FilterBar.jsx  FilterBar.test.jsx  PipelineButton.jsx
models/: edital.py  evaluation.py
providers/: base.py  claude_provider.py  metrics.py  openai_provider.py
scrapers/: base_scraper.py  capes_scraper.py  fapdf_scraper.py  funcap_scraper.py
tests/: test_config.py  test_main.py
tests/api/: test_editais.py  test_evaluation.py  test_pipeline.py
tests/extractors/: test_llm_extractor.py  test_llm_judge.py  test_pdf_extractor.py
tests/models/: test_edital.py  test_evaluation.py
tests/providers/: test_providers.py
tests/scrapers/: test_capes_scraper.py  test_fapdf_scraper.py  test_funcap_scraper.py
